# iedib

./: .gitignore  README.md
Models d'IA/Practica 1/: tasca_1_models_ia.ipynb
Models d'IA/Practica 2/: Lliurament_2_Models_d'IA.ipynb  domain.pddl  problem.pddl  requirements.txt  transport-mad-bcn.pddl.soln
Programació d'IA/: tasca_1_programacio_ia.ipynb
Programació d'IA/Practica 1/: tasca_1_programacio_ia.ipynb
Programació d'IA/Practica 2/: Copia_de_Tasca_2(1).ipynb  Copia_de_Tasca_2.ipynb  copia_de_tasca_2.py  tasca 2.ipynb
Programació d'IA/Practica 3/: PENGUINS.docx
Programació d'IA/Practica 3/penguin-classifier/: pyproject.toml
Programació d'IA/Practica 3/penguin-classifier/models/: label_encoder.joblib  svm_model.joblib
Programació d'IA/Practica 3/penguin-classifier/src/: app.py  client.py
Programació d'IA/practica_2/: tasca 2.ipynb
Programació d'IA/practica_4/: readme.md
Sistemes d'aprenentatge automàtic/Practica 2/: sistemes_aprenentatge_automatica_p2.ipynb
Sistemes d'aprenentatge automàtic/Practica 3/: Copia_de_Tasca_regressió_24_25(1).ipynb  Tasca_regressió_24_25.ipynb  regressio.ipynb
Sistemes de Big Data/: practica_1.txt
Sistemes de Big Data/Practica 2/: sistemes_big_data_2_1.ipynb  sistemes_big_data_2_2.ipynb  sistemes_big_data_2_3.ipynb  sistemes_big_data_2_4
Sistemes de Big Data/Practica 3/: activitat3.txt  readme.md
big_data_aplicat/practica_4/: activitat1.txt  activitat2.txt  activitat3.txt  readme.md
big_data_aplicat/practica_5/: readme.md
big_data_aplicat/practica_6/: apartat1.py  apartat_2_mysql.txt  readme.md
(+112 files in other folders)
