[tool.poetry]
name = "penguin-classifier"
version = "0.1.0"
description = "Prenguin classifier"
authors = ["jordi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
scikit-learn = "^1.0.0"
seaborn = "^0.12.0"
flask = "^2.0.0"
requests = "^2.28.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
